@@ -140,6 +140,8 @@ struct str_table mvars[] = {
     { M_EHAT,    "$ehat" },
     { M_MNLPROBS, "$mnlprobs" },
     { M_XLIST,   "$xlist" },
+    { M_COMMAND, "$command" },
+    { M_DEPVAR,  "$depvar" },
     { 0,         NULL }
 };
 
