@@ -11,6 +11,8 @@ version 1.9.5, in progress
   confidence interval for mean Y rather than actual Y
 - Fix a small memory leak when opening an *.asc data file
 - New function colname(): retrieve a column name from a matrix
+- New model accessors with string values: $depvar for the name of the
+  dependent variable, and $command for the command word used
 - Matrix "division": give the operators "\" and "/" the same semantics
   as in Octave/Matlab (left and right division)
 - Remove the FGLS "arch" command from the GUI and add a deprecating
